--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/noticeboard?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=qazxx10164!
 
+mybatis.configuration.map-underscore-to-camel-case=true
